--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,6 +1,6 @@
 @import './normalize.css';
 
-/*:root -> 获取根元素html*/
+/*:root -> 这个伪类为了获取根元素html*/
 :root {
   --color-text: #666;
   --color-high-text: #ff5777;
